--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
-  font-family: "Noto Sans Thai", sans-serif;
+  font-family: "Noto Sans Thai", sans-serif !important;
 }
-
 
 .form-control:focus,
 .form-control:active,
